# transformer

./: decoder_only.ipynb  main.py  pyproject.toml  requirements.txt
src/: logger.py
src/modules/attention/: self_attention.py
src/modules/data/: data_ingestion.py
src/modules/decoder/: decoder.py
src/modules/embeddings/: positonal_embeddings.py  rope_embeddings.py
src/modules/encoder/: encoder.py
src/modules/feedforward/: feedforward_network.py
src/research/: decoder_only.ipynb
