[project]
name = "audible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "importlib-resources>=7.1.0",
    "ipykernel>=7.3.0",
    "keras>=3.14.1",
    "numpy>=2.4.6",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.10",
]
